=== MetricFu 1.1.2 / 2009-7-09

* Removed dependency on gruff and rmagick (unless the user wants graphs, of course).
* New look for styling -- Edouard Brière
* Extra param in rcov call was causing problems -- Stewart Welbourne
* Preventing rake task from being run multiple times when other rake tasks switch the environment -- Matthew Van Horn
* Typo in Rcov dependency verification and fixing parsing Saikuro nested information -- Mark Wilden

=== MetricFu 1.1.1 / 2009-6-29

* Fix for empty flog files

=== MetricFu 1.1.0 / 2009-6-22

* Flog, flay, reek, roodi, and rcov reports now graph progress over time.  Well done Nick Quaranto and Edouard Brière.
* 'Awesome' template has been brought in so that reports look 90% less 'ghetto.'  Also done by Nick Quaranto and Edouard Brière.
* Added links to TextMate (which keep getting removed.  Probably by me. Sorry.) -- David Chelimsky
* Fixed a bug for scratch files which have a size of 0 -- Kevin Hall
* Changed gem dependencies from install-time in gemspec to runtime when each of the generators is loaded.  This allows use of github gems (i.e. relevance-rcov instead of rcov) and also allows you to install only the gems for the metrics you plan on using.  -- Alex Rothenberg
* Empty Flog file fix -- Adam Bair
* Added a simple fix for cases where Saikuro results with nested information -- Randy Souza
* Fixed rcov configuration so it ignores library files on Linux -- Diego Carrion
* Changing churn so that it still works deeper than the git root directory -- Andrew Timberlake
* Andrew Timberlake also made some nice changes to the base template which kinda of got overshadowed by the 'awesome' template.  Sorry about that Andrew.

=== MetricFu 1.0.2 / 2009-5-11

* Fixing problems with Reek new line character (thanks to all who pointed this out)
* Flog now recognizes namespaces in method names thanks to Daniel Guettler
* Saikuro now looks at multiple directories, again.

=== MetricFu 1.0.1 / 2009-5-3
